--- a/index.html
+++ b/index.html
@@ -477,13 +477,13 @@
             <a href="#" title="Instagram">📷</a>
             <a href="#" title="Email">✉️</a>
         </div>
-        <p>如有任何問題或商業合作，歡迎聯絡：<a href="mailto:support@aquarium-hk.com" class="contact-email">support@aquarium-hk.com</a></p>
+        <p>如有任何問題或商業合作，歡迎聯絡：<a href="mailto:raychan19999@gmail.com" class="contact-email">raychan19999@gmail.com</a></p>
         <p style="margin-top: 20px;">&copy; 2026 香港水族交流區. All rights reserved.</p>
     </div>
 
     <script>
         // 下載鏈接配置
-        const appwriteApkUrl = "https://sgp.cloud.appwrite.io/v1/storage/buckets/Images/files/69a1b708003ac5bf464e/download?project=699b02d5003adf9da180"; 
+        const appwriteApkUrl = "https://sgp.cloud.appwrite.io/v1/storage/buckets/Images/files/69a1c14b0017d2f68304/download?project=699b02d5003adf9da180";
         
         const btn = document.getElementById('downloadLink');
         if (appwriteApkUrl) {
