--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                 <span>🌐</span> 網頁版試用
             </a>
         </div>
-        <p class="version-info">最新版本: v1.0.0 | 發布日期: 2026-02-27</p>
+        <p class="version-info">最新版本: v1.0.0 | 發布日期: 2026-03-01</p>
     </div>
 
     <div class="container">
@@ -434,6 +434,19 @@
         <div class="section">
             <h2 class="section-title">更新日誌</h2>
             <div class="changelog">
+                <div class="version-row">
+                    <div>
+                        <span class="version-tag">v1.0.1</span>
+                        <span class="version-date">2026-03-01</span>
+                    </div>
+                    <ul class="version-list">
+                        <li>🎉 <strong>更新發布！</strong> </li>
+                        <li>✅ 修復用戶頭像不顯示問題。</li>
+                        <li>✅ 修復 APK 無法發送私信和圖片的問題。</li>
+                        <li>✅ 優化管理員及版主權限與置頂功能。</li>
+                        <li>✅ 改善交易區發帖體驗。</li>
+                    </ul>
+                </div>
                 <div class="version-row">
                     <div>
                         <span class="version-tag">v1.0.0</span>
