--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                 <span>📥</span> 下載 Android APK
             </a>
             <a href="index2.html" class="download-btn secondary">
-                <span>🌐</span> 網頁版試用
+                <span>🌐</span> IOS／網站版
             </a>
         </div>
         <p class="version-info">最新版本: v1.0.0 | 發布日期: 2026-03-01</p>
@@ -496,7 +496,7 @@
 
     <script>
         // 下載鏈接配置
-        const appwriteApkUrl = "https://sgp.cloud.appwrite.io/v1/storage/buckets/Images/files/69a3fa38003050000c1a/download?project=699b02d5003adf9da180";
+        const appwriteApkUrl = "https://sgp.cloud.appwrite.io/v1/storage/buckets/Images/files/69a41f060028b0004815/download?project=699b02d5003adf9da180";
         
         const btn = document.getElementById('downloadLink');
         if (appwriteApkUrl) {
